--- a/Datos/ConfigDB/src/main/resources/properties/DB.properties
+++ b/Datos/ConfigDB/src/main/resources/properties/DB.properties
@@ -1,4 +1,8 @@
-db.driver=com.mysql.cj.jdbc.Driver
-db.url=jdbc:mysql://localhost:3306/databasemensajeria?useSSL=false&serverTimezone=UTC
-db.user=root
-db.password=root
+mysql.driver=com.mysql.cj.jdbc.Driver
+mysql.url=jdbc:mysql://localhost:3306/databasemensajeria?useSSL=false&serverTimezone=UTC
+mysql.user=root
+mysql.password=root
+server.port=5050
+server.maxConnections=5
+storage.audioDir=/var/chat/audio
+log.level=INFO
