--- a/Aplicacion/Servicios/pom.xml
+++ b/Aplicacion/Servicios/pom.xml
@@ -14,4 +14,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.arquitectura.entidades</groupId>
+            <artifactId>Entidades</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.arquitectura.repositorios</groupId>
+            <artifactId>Repositorios</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.arquitectura</groupId>
+            <artifactId>ConfigDB</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
