--- a/Aplicacion/Servicios/pom.xml
+++ b/Aplicacion/Servicios/pom.xml
@@ -30,5 +30,10 @@
             <artifactId>ConfigDB</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.arquitectura.dtos</groupId>
+            <artifactId>DTO</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
