--- a/Presentacion/Vistas/pom.xml
+++ b/Presentacion/Vistas/pom.xml
@@ -8,18 +8,16 @@
     
     <dependencies>
         <dependency>
-            <groupId>com.arquitectura</groupId>
+            <groupId>com.arquitectura.controladores</groupId>
             <artifactId>Controladores</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        
+
         <dependency>
-            <groupId>com.arquitectura</groupId>
+            <groupId>com.arquitectura.dtos</groupId>
             <artifactId>DTO</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        
-        
     </dependencies>
     
     <properties>
