--- a/Presentacion/Vistas/pom.xml
+++ b/Presentacion/Vistas/pom.xml
@@ -18,11 +18,35 @@
             <artifactId>DTO</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.arquitectura.servicios</groupId>
+            <artifactId>Servicios</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.arquitectura.repositorios</groupId>
+            <artifactId>Repositorios</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.arquitectura.entidades</groupId>
+            <artifactId>Entidades</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.arquitectura</groupId>
+            <artifactId>ConfigDB</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
-    
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
-        <exec.mainClass>com.arquitectura.vistas.Vistas</exec.mainClass>
+        <exec.mainClass>com.arquitectura.entidades.vistas.Vistas</exec.mainClass>
     </properties>
 </project>
