Refactor bootstrap wiring to enforce layered architecture

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>DTO</module>
         <module>Persistencia/Repositorios</module>
         <module>Aplicacion/Servicios</module>
+        <module>Aplicacion/Bootstrap</module>
         <module>Aplicacion/Controladores</module>
         <module>Presentacion/Vistas</module>
     </modules>
