--- a/Aplicacion/Bootstrap/pom.xml
+++ b/Aplicacion/Bootstrap/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.arquitectura.servicios</groupId>
-    <artifactId>Servicios</artifactId>
+    <groupId>com.arquitectura.bootstrap</groupId>
+    <artifactId>Bootstrap</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -16,8 +16,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.arquitectura.entidades</groupId>
-            <artifactId>Entidades</artifactId>
+            <groupId>com.arquitectura</groupId>
+            <artifactId>ConfigDB</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -26,8 +26,13 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.arquitectura.dtos</groupId>
-            <artifactId>DTO</artifactId>
+            <groupId>com.arquitectura.servicios</groupId>
+            <artifactId>Servicios</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.arquitectura.controladores</groupId>
+            <artifactId>Controladores</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
