--- a/Presentacion/Vistas/pom.xml
+++ b/Presentacion/Vistas/pom.xml
@@ -12,34 +12,9 @@
             <artifactId>Controladores</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
         <dependency>
-            <groupId>com.arquitectura.dtos</groupId>
-            <artifactId>DTO</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.arquitectura.servicios</groupId>
-            <artifactId>Servicios</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.arquitectura.repositorios</groupId>
-            <artifactId>Repositorios</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.arquitectura.entidades</groupId>
-            <artifactId>Entidades</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.arquitectura</groupId>
-            <artifactId>ConfigDB</artifactId>
+            <groupId>com.arquitectura.bootstrap</groupId>
+            <artifactId>Bootstrap</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
