--- a/Aplicacion/Bootstrap/pom.xml
+++ b/Aplicacion/Bootstrap/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>com.arquitectura</groupId>
+        <artifactId>Servidor</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
+
     <groupId>com.arquitectura.bootstrap</groupId>
     <artifactId>Bootstrap</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -18,22 +25,18 @@
         <dependency>
             <groupId>com.arquitectura</groupId>
             <artifactId>ConfigDB</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.arquitectura.repositorios</groupId>
             <artifactId>Repositorios</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.arquitectura.servicios</groupId>
             <artifactId>Servicios</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.arquitectura.controladores</groupId>
             <artifactId>Controladores</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
