--- a/Persistencia/Repositorios/pom.xml
+++ b/Persistencia/Repositorios/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>com.arquitectura</groupId>
+        <artifactId>Servidor</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
+
     <groupId>com.arquitectura.repositorios</groupId>
     <artifactId>Repositorios</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -18,12 +25,10 @@
         <dependency>
             <groupId>com.arquitectura.entidades</groupId>
             <artifactId>Entidades</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.arquitectura</groupId>
             <artifactId>ConfigDB</artifactId>
-            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
