Align compiler configuration across modules

--- a/Aplicacion/Servicios/pom.xml
+++ b/Aplicacion/Servicios/pom.xml
@@ -15,12 +15,6 @@
     <artifactId>Servicios</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
     <dependencies>
         <!-- Capa de Dominio -->
         <dependency>
@@ -50,7 +44,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
-            <version>2.17.1</version>
+            <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
