--- a/Aplicacion/Bootstrap/src/main/resources/properties/server.properties
+++ b/Aplicacion/Bootstrap/src/main/resources/properties/server.properties
@@ -1,6 +1,9 @@
 # Server Configuration
 server.port=5000
 server.maxConnections=4
+server.peerPort=6000
+server.id=server-a
+server.peers=
 
 # Storage Configuration
 storage.audioDir=/var/chat/audio
