Feat: Implement server metrics for Grafana and Prometheus

--- a/Aplicacion/Bootstrap/src/main/resources/properties/server.properties
+++ b/Aplicacion/Bootstrap/src/main/resources/properties/server.properties
@@ -4,6 +4,9 @@ server.maxConnections=4
 server.peerPort=6000
 server.id=server-a
 server.peers=
+metrics.port=5100
+# URL base o dashboard de Grafana para el panel de monitoreo
+grafana.url=http://localhost:3000
 
 # Storage Configuration
 storage.audioDir=/var/chat/audio
