--- a/Aplicacion/Servicios/pom.xml
+++ b/Aplicacion/Servicios/pom.xml
@@ -46,6 +46,17 @@
             <artifactId>jackson-datatype-jsr310</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <!-- Prometheus Java client para métricas / Grafana -->
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient</artifactId>
+            <version>0.16.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.prometheus</groupId>
+            <artifactId>simpleclient_httpserver</artifactId>
+            <version>0.16.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
