Feat: Add HTML pages for comprehensive WebSocket testing with REST/SockJS support, metrics, logs and UI improvements

--- a/Aplicacion/Bootstrap/src/main/resources/properties/server.properties
+++ b/Aplicacion/Bootstrap/src/main/resources/properties/server.properties
@@ -6,7 +6,9 @@ server.id=server-a
 server.peers=
 metrics.port=5100
 # URL base o dashboard de Grafana para el panel de monitoreo
-grafana.url=http://localhost:3000
+grafana.url=http://grafana:3000
+# URL de Loki para agregación de logs
+loki.url=http://localhost:3100
 
 # Storage Configuration
 storage.audioDir=/var/chat/audio
