--- a/Aplicacion/Servicios/pom.xml
+++ b/Aplicacion/Servicios/pom.xml
@@ -34,11 +34,23 @@
             <artifactId>DTO</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!-- ConfigDB para acceso a configuración -->
+        <dependency>
+            <groupId>com.arquitectura</groupId>
+            <artifactId>ConfigDB</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- Vosk Speech Recognition -->
         <dependency>
             <groupId>com.alphacephei</groupId>
             <artifactId>vosk</artifactId>
             <version>0.3.45</version>
+        </dependency>
+        <!-- JNA requerido por Vosk -->
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>5.13.0</version>
         </dependency>
         <!-- Jackson JSR310 para LocalDateTime -->
         <dependency>
