--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.release>21</maven.compiler.release>
         <jackson.version>2.17.1</jackson.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <loki.version>1.4.2</loki.version>
     </properties>
 
     <modules>
@@ -23,6 +26,7 @@
         <module>Aplicacion/Servicios</module>
         <module>Aplicacion/Bootstrap</module>
         <module>Aplicacion/Controladores</module>
+        <module>Aplicacion/RestAPI</module>
         <module>Presentacion/Vistas</module>
     </modules>
 
@@ -84,5 +88,15 @@
                 </plugin>
             </plugins>
         </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.13.0</version>
+                <configuration>
+                    <release>${maven.compiler.release}</release>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
