--- a/ApiGateway/src/main/resources/application.properties
+++ b/ApiGateway/src/main/resources/application.properties
@@ -42,17 +42,26 @@ gateway.websocket.connection-timeout=10000
 gateway.websocket.max-connections-per-server=5
 gateway.websocket.reconnect-interval=30000
 
-# Lista de servidores REST a monitorear (disponibilidad determinada dinámicamente)
+# Lista de servidores REST a monitorear
 gateway.servers[0].id=rest-server-1
-gateway.servers[0].name=Servidor REST Principal
+gateway.servers[0].name=Servidor REST 1
 gateway.servers[0].host=localhost
 gateway.servers[0].port=8089
 
-# Servidor secundario para pruebas de conectividad
 gateway.servers[1].id=rest-server-2
-gateway.servers[1].name=Servidor REST Secundario
+gateway.servers[1].name=Servidor REST 2
 gateway.servers[1].host=192.168.1.100
 gateway.servers[1].port=8090
+
+gateway.servers[2].id=rest-server-3
+gateway.servers[2].name=Servidor REST 3
+gateway.servers[2].host=192.168.1.101
+gateway.servers[2].port=8090
+
+gateway.servers[3].id=rest-server-4
+gateway.servers[3].name=Servidor REST 4
+gateway.servers[3].host=192.168.1.102
+gateway.servers[3].port=8090
 
 # Configuración de recolección de datos
 gateway.data-collection.metrics-interval=5000
