--- a/Frontend/monitoring/prometheus/prometheus.yml
+++ b/Frontend/monitoring/prometheus/prometheus.yml
@@ -33,7 +33,7 @@ scrape_configs:
           - '/etc/prometheus/targets/rest-servers.json'
         refresh_interval: 10s
     scrape_interval: 5s
-    metrics_path: '/actuator/prometheus'
+    metrics_path: '/api/metrics'
     scrape_timeout: 4s
     honor_labels: false
     params:
